// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`qimen golden fixtures > matches golden snapshot: g01-winter-midterm-utc8 1`] = `
{
  "dun": "yang",
  "ju": 8,
  "palaceDigest": {
    "1": {
      "diPanStem": "丙",
      "door": "景门",
      "god": "值符",
      "isXunKong": true,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "1",
      "star": "天柱",
      "tianPanStem": "癸",
    },
    "2": {
      "diPanStem": "壬",
      "door": "生门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "天辅",
      "tianPanStem": "庚",
    },
    "3": {
      "diPanStem": "己",
      "door": "惊门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "3",
      "star": "天蓬",
      "tianPanStem": "丙",
    },
    "4": {
      "diPanStem": "庚",
      "door": "开门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "天任",
      "tianPanStem": "戊",
    },
    "6": {
      "diPanStem": "丁",
      "door": "杜门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "禽芮",
      "tianPanStem": "壬",
    },
    "7": {
      "diPanStem": "癸",
      "door": "伤门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天英",
      "tianPanStem": "辛",
    },
    "8": {
      "diPanStem": "戊",
      "door": "死门",
      "god": "腾蛇",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天心",
      "tianPanStem": "丁",
    },
    "9": {
      "diPanStem": "辛",
      "door": "休门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天冲",
      "tianPanStem": "己",
    },
  },
  "solarTerm": {
    "dayIndex": 9,
    "index": 0,
    "name": "小寒",
    "nextUtcIso": "2024-01-20T20:20:00.862Z",
    "startUtcIso": "2024-01-06T02:52:00.862Z",
  },
  "xun": {
    "hourStemBranch": "丙辰",
    "xunKongBranches": [
      "子",
      "丑",
    ],
    "xunKongPalaces": [
      "1",
      "8",
    ],
    "xunName": "甲寅",
    "xunShou": "癸",
  },
  "yuan": "middle",
  "zhiFuZhiShi": {
    "zhiFuPalace": "1",
    "zhiFuSourcePalace": "7",
    "zhiFuStar": "天柱",
    "zhiShiDoor": "惊门",
    "zhiShiPalace": "3",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g02-lichun-window-utc8 1`] = `
{
  "dun": "yang",
  "ju": 5,
  "palaceDigest": {
    "1": {
      "diPanStem": "辛",
      "door": "惊门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "1",
      "star": "天心",
      "tianPanStem": "庚",
    },
    "2": {
      "diPanStem": "戊",
      "door": "杜门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "天英",
      "tianPanStem": "丙",
    },
    "3": {
      "diPanStem": "癸",
      "door": "休门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天任",
      "tianPanStem": "壬",
    },
    "4": {
      "diPanStem": "丁",
      "door": "生门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "天冲",
      "tianPanStem": "癸",
    },
    "6": {
      "diPanStem": "庚",
      "door": "死门",
      "god": "腾蛇",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "6",
      "star": "天柱",
      "tianPanStem": "己",
    },
    "7": {
      "diPanStem": "己",
      "door": "景门",
      "god": "值符",
      "isXunKong": false,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "7",
      "star": "禽芮",
      "tianPanStem": "戊",
    },
    "8": {
      "diPanStem": "壬",
      "door": "开门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天蓬",
      "tianPanStem": "辛",
    },
    "9": {
      "diPanStem": "丙",
      "door": "伤门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天辅",
      "tianPanStem": "丁",
    },
  },
  "solarTerm": {
    "dayIndex": 6,
    "index": 2,
    "name": "立春",
    "nextUtcIso": "2024-02-19T10:48:00.862Z",
    "startUtcIso": "2024-02-04T14:39:00.862Z",
  },
  "xun": {
    "hourStemBranch": "己巳",
    "xunKongBranches": [
      "戌",
      "亥",
    ],
    "xunKongPalaces": [
      "6",
    ],
    "xunName": "甲子",
    "xunShou": "戊",
  },
  "yuan": "middle",
  "zhiFuZhiShi": {
    "zhiFuPalace": "7",
    "zhiFuSourcePalace": "2",
    "zhiFuStar": "天芮",
    "zhiShiDoor": "死门",
    "zhiShiPalace": "6",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g03-spring-equinox-near-latezi 1`] = `
{
  "dun": "yang",
  "ju": 3,
  "palaceDigest": {
    "1": {
      "diPanStem": "丁",
      "door": "休门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "1",
      "star": "天蓬",
      "tianPanStem": "丁",
    },
    "2": {
      "diPanStem": "辛",
      "door": "死门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "禽芮",
      "tianPanStem": "辛",
    },
    "3": {
      "diPanStem": "戊",
      "door": "伤门",
      "god": "白虎",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天冲",
      "tianPanStem": "戊",
    },
    "4": {
      "diPanStem": "己",
      "door": "杜门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "天辅",
      "tianPanStem": "己",
    },
    "6": {
      "diPanStem": "癸",
      "door": "开门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "天心",
      "tianPanStem": "癸",
    },
    "7": {
      "diPanStem": "壬",
      "door": "惊门",
      "god": "值符",
      "isXunKong": false,
      "isZhiFu": true,
      "isZhiShi": true,
      "palace": "7",
      "star": "天柱",
      "tianPanStem": "壬",
    },
    "8": {
      "diPanStem": "丙",
      "door": "生门",
      "god": "六合",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天任",
      "tianPanStem": "丙",
    },
    "9": {
      "diPanStem": "庚",
      "door": "景门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天英",
      "tianPanStem": "庚",
    },
  },
  "solarTerm": {
    "dayIndex": 1,
    "index": 5,
    "name": "春分",
    "nextUtcIso": "2024-04-04T14:39:00.862Z",
    "startUtcIso": "2024-03-20T10:26:00.862Z",
  },
  "xun": {
    "hourStemBranch": "壬子",
    "xunKongBranches": [
      "寅",
      "卯",
    ],
    "xunKongPalaces": [
      "8",
      "3",
    ],
    "xunName": "甲辰",
    "xunShou": "壬",
  },
  "yuan": "upper",
  "zhiFuZhiShi": {
    "zhiFuPalace": "7",
    "zhiFuSourcePalace": "7",
    "zhiFuStar": "天柱",
    "zhiShiDoor": "惊门",
    "zhiShiPalace": "7",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g04-grain-rain-window 1`] = `
{
  "dun": "yang",
  "ju": 2,
  "palaceDigest": {
    "1": {
      "diPanStem": "辛",
      "door": "景门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "1",
      "star": "天柱",
      "tianPanStem": "己",
    },
    "2": {
      "diPanStem": "戊",
      "door": "生门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "2",
      "star": "天辅",
      "tianPanStem": "丁",
    },
    "3": {
      "diPanStem": "癸",
      "door": "惊门",
      "god": "九天",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天蓬",
      "tianPanStem": "辛",
    },
    "4": {
      "diPanStem": "丁",
      "door": "开门",
      "god": "值符",
      "isXunKong": false,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "4",
      "star": "天任",
      "tianPanStem": "壬",
    },
    "6": {
      "diPanStem": "庚",
      "door": "杜门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "禽芮",
      "tianPanStem": "戊",
    },
    "7": {
      "diPanStem": "己",
      "door": "伤门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天英",
      "tianPanStem": "丙",
    },
    "8": {
      "diPanStem": "壬",
      "door": "死门",
      "god": "九地",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天心",
      "tianPanStem": "庚",
    },
    "9": {
      "diPanStem": "丙",
      "door": "休门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天冲",
      "tianPanStem": "癸",
    },
  },
  "solarTerm": {
    "dayIndex": 9,
    "index": 7,
    "name": "谷雨",
    "nextUtcIso": "2024-05-05T08:41:00.862Z",
    "startUtcIso": "2024-04-19T22:13:00.862Z",
  },
  "xun": {
    "hourStemBranch": "丁未",
    "xunKongBranches": [
      "寅",
      "卯",
    ],
    "xunKongPalaces": [
      "8",
      "3",
    ],
    "xunName": "甲辰",
    "xunShou": "壬",
  },
  "yuan": "middle",
  "zhiFuZhiShi": {
    "zhiFuPalace": "4",
    "zhiFuSourcePalace": "8",
    "zhiFuStar": "天任",
    "zhiShiDoor": "生门",
    "zhiShiPalace": "2",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g05-summer-before-solstice 1`] = `
{
  "dun": "yang",
  "ju": 6,
  "palaceDigest": {
    "1": {
      "diPanStem": "己",
      "door": "休门",
      "god": "值符",
      "isXunKong": false,
      "isZhiFu": true,
      "isZhiShi": true,
      "palace": "1",
      "star": "天蓬",
      "tianPanStem": "己",
    },
    "2": {
      "diPanStem": "丁",
      "door": "死门",
      "god": "玄武",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "禽芮",
      "tianPanStem": "丁",
    },
    "3": {
      "diPanStem": "辛",
      "door": "伤门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天冲",
      "tianPanStem": "辛",
    },
    "4": {
      "diPanStem": "壬",
      "door": "杜门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "天辅",
      "tianPanStem": "壬",
    },
    "6": {
      "diPanStem": "戊",
      "door": "开门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "天心",
      "tianPanStem": "戊",
    },
    "7": {
      "diPanStem": "丙",
      "door": "惊门",
      "god": "九地",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天柱",
      "tianPanStem": "丙",
    },
    "8": {
      "diPanStem": "庚",
      "door": "生门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天任",
      "tianPanStem": "庚",
    },
    "9": {
      "diPanStem": "癸",
      "door": "景门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天英",
      "tianPanStem": "癸",
    },
  },
  "solarTerm": {
    "dayIndex": 5,
    "index": 10,
    "name": "芒种",
    "nextUtcIso": "2024-06-21T06:25:00.862Z",
    "startUtcIso": "2024-06-05T13:24:00.862Z",
  },
  "xun": {
    "hourStemBranch": "己卯",
    "xunKongBranches": [
      "申",
      "酉",
    ],
    "xunKongPalaces": [
      "2",
      "7",
    ],
    "xunName": "甲戌",
    "xunShou": "己",
  },
  "yuan": "upper",
  "zhiFuZhiShi": {
    "zhiFuPalace": "1",
    "zhiFuSourcePalace": "1",
    "zhiFuStar": "天蓬",
    "zhiShiDoor": "休门",
    "zhiShiPalace": "1",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g06-minor-heat-window 1`] = `
{
  "dun": "yin",
  "ju": 5,
  "palaceDigest": {
    "1": {
      "diPanStem": "壬",
      "door": "景门",
      "god": "太阴",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "1",
      "star": "天冲",
      "tianPanStem": "庚",
    },
    "2": {
      "diPanStem": "辛",
      "door": "生门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "天心",
      "tianPanStem": "乙",
    },
    "3": {
      "diPanStem": "庚",
      "door": "惊门",
      "god": "值符",
      "isXunKong": false,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "3",
      "star": "天英",
      "tianPanStem": "癸",
    },
    "4": {
      "diPanStem": "己",
      "door": "开门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "禽芮",
      "tianPanStem": "辛",
    },
    "6": {
      "diPanStem": "乙",
      "door": "杜门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "天任",
      "tianPanStem": "丁",
    },
    "7": {
      "diPanStem": "丙",
      "door": "伤门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天蓬",
      "tianPanStem": "壬",
    },
    "8": {
      "diPanStem": "丁",
      "door": "死门",
      "god": "腾蛇",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天辅",
      "tianPanStem": "己",
    },
    "9": {
      "diPanStem": "癸",
      "door": "休门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天柱",
      "tianPanStem": "丙",
    },
  },
  "solarTerm": {
    "dayIndex": 12,
    "index": 12,
    "name": "小暑",
    "nextUtcIso": "2024-07-22T17:21:00.862Z",
    "startUtcIso": "2024-07-06T23:55:00.862Z",
  },
  "xun": {
    "hourStemBranch": "庚申",
    "xunKongBranches": [
      "子",
      "丑",
    ],
    "xunKongPalaces": [
      "1",
      "8",
    ],
    "xunName": "甲寅",
    "xunShou": "癸",
  },
  "yuan": "lower",
  "zhiFuZhiShi": {
    "zhiFuPalace": "3",
    "zhiFuSourcePalace": "9",
    "zhiFuStar": "天英",
    "zhiShiDoor": "景门",
    "zhiShiPalace": "1",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g07-white-dew-window 1`] = `
{
  "dun": "yin",
  "ju": 4,
  "palaceDigest": {
    "1": {
      "diPanStem": "辛",
      "door": "惊门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "1",
      "star": "禽芮",
      "tianPanStem": "庚",
    },
    "2": {
      "diPanStem": "庚",
      "door": "杜门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "天冲",
      "tianPanStem": "己",
    },
    "3": {
      "diPanStem": "己",
      "door": "休门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "3",
      "star": "天心",
      "tianPanStem": "丙",
    },
    "4": {
      "diPanStem": "戊",
      "door": "生门",
      "god": "值符",
      "isXunKong": true,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "4",
      "star": "天蓬",
      "tianPanStem": "辛",
    },
    "6": {
      "diPanStem": "丙",
      "door": "死门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "天英",
      "tianPanStem": "壬",
    },
    "7": {
      "diPanStem": "丁",
      "door": "景门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天辅",
      "tianPanStem": "戊",
    },
    "8": {
      "diPanStem": "癸",
      "door": "开门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天柱",
      "tianPanStem": "丁",
    },
    "9": {
      "diPanStem": "壬",
      "door": "伤门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天任",
      "tianPanStem": "癸",
    },
  },
  "solarTerm": {
    "dayIndex": 8,
    "index": 15,
    "name": "处暑",
    "nextUtcIso": "2024-09-07T12:02:00.862Z",
    "startUtcIso": "2024-08-23T00:05:00.862Z",
  },
  "xun": {
    "hourStemBranch": "戊戌",
    "xunKongBranches": [
      "辰",
      "巳",
    ],
    "xunKongPalaces": [
      "4",
    ],
    "xunName": "甲午",
    "xunShou": "辛",
  },
  "yuan": "middle",
  "zhiFuZhiShi": {
    "zhiFuPalace": "4",
    "zhiFuSourcePalace": "1",
    "zhiFuStar": "天蓬",
    "zhiShiDoor": "休门",
    "zhiShiPalace": "3",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g08-cold-dew-window 1`] = `
{
  "dun": "yin",
  "ju": 6,
  "palaceDigest": {
    "1": {
      "diPanStem": "癸",
      "door": "休门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "1",
      "star": "天蓬",
      "tianPanStem": "癸",
    },
    "2": {
      "diPanStem": "壬",
      "door": "死门",
      "god": "值符",
      "isXunKong": true,
      "isZhiFu": true,
      "isZhiShi": true,
      "palace": "2",
      "star": "禽芮",
      "tianPanStem": "壬",
    },
    "3": {
      "diPanStem": "辛",
      "door": "伤门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天冲",
      "tianPanStem": "辛",
    },
    "4": {
      "diPanStem": "庚",
      "door": "杜门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "天辅",
      "tianPanStem": "庚",
    },
    "6": {
      "diPanStem": "戊",
      "door": "开门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "天心",
      "tianPanStem": "戊",
    },
    "7": {
      "diPanStem": "乙",
      "door": "惊门",
      "god": "九天",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天柱",
      "tianPanStem": "乙",
    },
    "8": {
      "diPanStem": "丙",
      "door": "生门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "天任",
      "tianPanStem": "丙",
    },
    "9": {
      "diPanStem": "丁",
      "door": "景门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天英",
      "tianPanStem": "丁",
    },
  },
  "solarTerm": {
    "dayIndex": 1,
    "index": 18,
    "name": "寒露",
    "nextUtcIso": "2024-10-23T05:42:00.862Z",
    "startUtcIso": "2024-10-08T02:59:00.862Z",
  },
  "xun": {
    "hourStemBranch": "壬午",
    "xunKongBranches": [
      "申",
      "酉",
    ],
    "xunKongPalaces": [
      "2",
      "7",
    ],
    "xunName": "甲戌",
    "xunShou": "己",
  },
  "yuan": "upper",
  "zhiFuZhiShi": {
    "zhiFuPalace": "2",
    "zhiFuSourcePalace": "2",
    "zhiFuStar": "天芮",
    "zhiShiDoor": "死门",
    "zhiShiPalace": "2",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g09-cross-timezone-utc5 1`] = `
{
  "dun": "yin",
  "ju": 5,
  "palaceDigest": {
    "1": {
      "diPanStem": "壬",
      "door": "休门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "1",
      "star": "天英",
      "tianPanStem": "癸",
    },
    "2": {
      "diPanStem": "辛",
      "door": "死门",
      "god": "九天",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "天任",
      "tianPanStem": "丁",
    },
    "3": {
      "diPanStem": "庚",
      "door": "伤门",
      "god": "太阴",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天柱",
      "tianPanStem": "丙",
    },
    "4": {
      "diPanStem": "己",
      "door": "杜门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "天心",
      "tianPanStem": "乙",
    },
    "6": {
      "diPanStem": "乙",
      "door": "开门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "6",
      "star": "天辅",
      "tianPanStem": "己",
    },
    "7": {
      "diPanStem": "丙",
      "door": "惊门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天冲",
      "tianPanStem": "庚",
    },
    "8": {
      "diPanStem": "丁",
      "door": "生门",
      "god": "六合",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "8",
      "star": "禽芮",
      "tianPanStem": "辛",
    },
    "9": {
      "diPanStem": "癸",
      "door": "景门",
      "god": "值符",
      "isXunKong": false,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "9",
      "star": "天蓬",
      "tianPanStem": "壬",
    },
  },
  "solarTerm": {
    "dayIndex": 4,
    "index": 21,
    "name": "小雪",
    "nextUtcIso": "2024-12-06T21:44:00.862Z",
    "startUtcIso": "2024-11-22T02:36:00.862Z",
  },
  "xun": {
    "hourStemBranch": "癸丑",
    "xunKongBranches": [
      "寅",
      "卯",
    ],
    "xunKongPalaces": [
      "8",
      "3",
    ],
    "xunName": "甲辰",
    "xunShou": "壬",
  },
  "yuan": "upper",
  "zhiFuZhiShi": {
    "zhiFuPalace": "9",
    "zhiFuSourcePalace": "1",
    "zhiFuStar": "天蓬",
    "zhiShiDoor": "休门",
    "zhiShiPalace": "1",
  },
}
`;

exports[`qimen golden fixtures > matches golden snapshot: g10-year-end-winter-solstice 1`] = `
{
  "dun": "yang",
  "ju": 7,
  "palaceDigest": {
    "1": {
      "diPanStem": "庚",
      "door": "景门",
      "god": "九天",
      "isXunKong": true,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "1",
      "star": "天冲",
      "tianPanStem": "壬",
    },
    "2": {
      "diPanStem": "丙",
      "door": "生门",
      "god": "白虎",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "2",
      "star": "天心",
      "tianPanStem": "己",
    },
    "3": {
      "diPanStem": "壬",
      "door": "惊门",
      "god": "腾蛇",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "3",
      "star": "天英",
      "tianPanStem": "丁",
    },
    "4": {
      "diPanStem": "癸",
      "door": "开门",
      "god": "太阴",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "4",
      "star": "禽芮",
      "tianPanStem": "丙",
    },
    "6": {
      "diPanStem": "己",
      "door": "杜门",
      "god": "九地",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": true,
      "palace": "6",
      "star": "天任",
      "tianPanStem": "辛",
    },
    "7": {
      "diPanStem": "戊",
      "door": "伤门",
      "god": "玄武",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "7",
      "star": "天蓬",
      "tianPanStem": "庚",
    },
    "8": {
      "diPanStem": "辛",
      "door": "死门",
      "god": "值符",
      "isXunKong": true,
      "isZhiFu": true,
      "isZhiShi": false,
      "palace": "8",
      "star": "天辅",
      "tianPanStem": "癸",
    },
    "9": {
      "diPanStem": "丁",
      "door": "休门",
      "god": "六合",
      "isXunKong": false,
      "isZhiFu": false,
      "isZhiShi": false,
      "palace": "9",
      "star": "天柱",
      "tianPanStem": "戊",
    },
  },
  "solarTerm": {
    "dayIndex": 9,
    "index": 23,
    "name": "冬至",
    "nextUtcIso": "2025-01-05T08:40:46.837Z",
    "startUtcIso": "2024-12-21T15:30:00.862Z",
  },
  "xun": {
    "hourStemBranch": "辛酉",
    "xunKongBranches": [
      "子",
      "丑",
    ],
    "xunKongPalaces": [
      "1",
      "8",
    ],
    "xunName": "甲寅",
    "xunShou": "癸",
  },
  "yuan": "middle",
  "zhiFuZhiShi": {
    "zhiFuPalace": "8",
    "zhiFuSourcePalace": "4",
    "zhiFuStar": "天辅",
    "zhiShiDoor": "杜门",
    "zhiShiPalace": "6",
  },
}
`;
